Tweaked portfolio css to make bottom border appear correctly sand ot prevent description overflow. Also added links to portfolio img and h3

--- a/css/base.css
+++ b/css/base.css
@@ -13,6 +13,14 @@ h1 {
   font-size: 40px;
 }
 
+a {
+  color: black;
+  text-decoration: underline;
+}
+a:hover {
+  text-decoration: none;
+}
+
 .template {
   display: none;
 }
